@@ -52,6 +52,8 @@ struct extract_options {
 	
 	bool warn_unused; //!< Warn if there are unused files
 	
+	bool list_sizes; //!< Show size information for files
+	
 	bool data_version; //!< Print the data version
 	bool list; //!< List files
 	bool test; //!< Test files (but don't extract)
@@ -86,6 +88,7 @@ struct extract_options {
 		: quiet(false)
 		, silent(false)
 		, warn_unused(false)
+		, list_sizes(false)
 		, data_version(false)
 		, list(false)
 		, test(false)
